# alti

./: .gitignore  .gitmodules  README.md
client/Alti/Alti/: SecondViewController.swift
client/Alti/Alti.xcodeproj/: project.pbxproj
client/Alti/Alti.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
client/Alti/Alti.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
client/Alti/Alti.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: xcschememanagement.plist
client/Alti/AltiTests/: AltiTests.swift  Info.plist
client/ble_debug/: alti.cc  alti.h  ble_debug.pro  ble_device.cc  ble_device.h  devicemanager.cc  devicemanager.h  main.cpp
client/desktop_client/: MainForm.ui.qml  Stream.qml  blecharacteristicstream.cpp  blecharacteristicstream.h  desktop_client.pro  devicemanager.cpp  devicemanager.h  main.cpp  main.qml  qml.qrc  sensor_packet.h
client/ios/Alti/Alti/: AltiHardware.swift  AppDelegate.swift  FirstViewController.swift  Info.plist  SettingsController.swift  SettingsViewController.swift
client/ios/Alti/Alti.xcodeproj/: project.pbxproj
client/ios/Alti/Alti.xcodeproj/project.xcworkspace/xcshareddata/: Alti.xccheckout  Alti.xcscmblueprint
client/ios/Alti/Alti.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
client/ios/Alti/Alti.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: Alti.xcscheme
client/ios/Alti/Alti/Base.lproj/: LaunchScreen.xib  Main.storyboard
client/qtquick_client/: Page1.qml  Page1Form.ui.qml  alticonfig.cpp  alticonfig.h  alticontroller.cc  alticontroller.h  altidevice.cc  altidevice.h  altisensoraccel.h  altisensorgps.h  altisensorpacket.cpp  altisensorpacket.h  datareader.h  globals.cc  globals.h  main.cpp  main.qml  qtquick_client.pro
enclosure/pcb/: aero.wrl
firmware/: CMakeLists.txt  Makefile  tags
firmware/include/: FreeRTOSConfig.h  aci.h  aci_cmds.h  aci_evts.h  aero.h  alarm.h  ble.h  bmx055.h  buffered_io.h  config.h  config.h.in  counters.h  empty_pins.h  events.h  features.h  filter.h  flash.h  globals.h  hal.h  hal_empty.h  hal_platform.h  hal_stm32_libopencm3.h  hal_stm32_stdperiphlib.h  i2c.h  logger.h  ms5611.h  nrf8001.h  periph.h  pins.def  pins.h  rtos.h  sample.h  services.h  settings.h  spi.h  state.h  stm32l1_opencm3_pins.h  stm32l1_pins.h  stm32l1_stdperiphlib_pins.h  task_alert.h  (+10 more)
firmware/share/: i2c.c  i2c.h
firmware/src/: CMakeLists.txt  aero.c  aero_test.c  ble.c  bmx055.c  buffered_io.c  config.c  fault_handlers.c  filter.c  flash.c  globals.c  hal_stm32.c  hal_stm32_libopencm3.c  hal_stm32_stdperiphlib.c  hal_stm32_test.c  hooks.c  i2c.c  init.c  logger.c  logger_private.h  main.c  ms5611.c  nrf8001.c  periph.c  settings.c  spi.c  startup_stm32l1xx_hd.s  task_alert.c  task_baro.c  task_ble.c  task_gps.c  task_main.c  task_sensor.c  task_status_led.c  test_native.c  ublox.c  ublox_isr.c  util.c  util.h
firmware/src/test/: aero_test.cc  ble_test.cc  buffered_io_test.cc  flash_mock.cc  flash_mock.h  logger_test.cc  rtos_stubs.c  settings_test.cc  utils.cc  utils.h
firmware/src/test_native/: logger_test.c  test_native.h
firmware/support/: PinDefinition.g4  PinDefinition.tokens  PinDefinitionLexer.py  aero_nrfgo.xml  gdb_commands  libopencm3_stm32l1.ld  openocd.sh  pin_def.py  start.py  stm32l15xxb.ld  uart  uart.c
firmware/support/cmake/: FreeRTOS.cmake  Libopencm3.cmake  Stm32PeriphLib.cmake  Toolchain-STM32.cmake  gtest.cmake
firmware/support/old/: Makefile
firmware/support/pin_parser/: PinDefinitionListener.py  PinDefinitionParser.py
hardware/: ERRATA  part_pins.txt  stm32l1_pins.xlsx
hardware/docs/: NOTES  part_pins.txt  stm32l1_pins.xlsx  ~$stm32l1_pins.xlsx
hardware/pcb/: GPS.bak  GPS.sch  _autosave-  _autosave-aero.kicad_pcb  aero  aero-cache.bak  aero-cache.lib  aero-rescue.bak  aero-rescue.lib  aero.bak  aero.bck  aero.cmp  aero.dcm  aero.kicad_pcb  aero.kicad_pcb-bak  aero.lib  aero.net  aero.pro  aero.sch  aero.wrl  aero.xml  at45db321e.bak  at45db321e.sch  bmx055.bak  bmx055.sch  fp-lib-table  ms5611.bak  ms5611.sch  nrf8001.bak  nrf8001.sch  pcb.pro  power.bak  power.sch  sensors.bak  warn.bak  warn.sch
hardware/pcb/aero.pretty/: 105443-1101(IP67_microUSB).kicad_mod  2450AT18A100.kicad_mod  2450BM14A0002.kicad_mod  6-µDFN.kicad_mod  Ant_Bluetooth.kicad_mod  B3U-1000P.kicad_mod  BMI055.kicad_mod  CGGP.25.4.A.02.kicad_mod  CONMMCX002-SMD.kicad_mod  Chip_Antenna_W3011A.kicad_mod  Conn_Molex_78171-02.kicad_mod  Crystal_32768_FC-135R.kicad_mod  Crystal_TSX_3225.kicad_mod  DBG-CRTX-TH.kicad_mod  FC-135R.kicad_mod  FTSH-105-01.kicad_mod  IND-744029100.kicad_mod  Jumper_Solder.kicad_mod  Murata_CSTCE-G_Oscillator.kicad_mod  Piezo_Solder_Conn.kicad_mod  Pin_Header_1x02.kicad_mod  Pin_Header_1x02_2mm.kicad_mod  QFN-32-1EP_5x5mm_Pitch0.5mm.kicad_mod  SDR0703.kicad_mod  SON-10.kicad_mod  SSOP-5.kicad_mod  SolderWirePad_2x_0-8mmDrill.kicad_mod  TC2050-IDC-NL.kicad_mod  TP_0603.kicad_mod  U.FL.kicad_mod  UDFN-8.kicad_mod  UFQFPN48.kicad_mod  Via_Stitch.kicad_mod  WM1399CT-ND.kicad_mod  cggp.25.4.a.02.wrl  crystal_SMD_3225.kicad_mod  ms5611.kicad_mod  ublox_MAX7.kicad_mod
hardware/pcb/shapes3D/: ufqfpn48.wrl
